<resources>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The accent theme color, defaults to green.</string>
    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist…</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist…</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_re_download_artist_image">Update artist image</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Set</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_show_lyrics">Show lyrics</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="add_action">Add</string>
    <string name="add_photo">Add  \nphoto</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <string name="album_artist">Album artist</string>
    <string name="album_desc">Album desc.</string>
    <string name="album_or_artist_empty">The title or artist is empty.</string>
    <string name="albums">Albums</string>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_last_added_long">@string/last_added</string>
    <string name="app_shortcut_last_added_short">@string/last_added</string>
    <string name="app_shortcut_shuffle_all_long">@string/action_shuffle_all</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_long">@string/my_top_tracks</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_summary">A Hybrid application between Material design and iOS in mind.</string>
    <string name="app_widget_big_name">Retro music - Big</string>
    <string name="app_widget_big_name_2">Retro music - Big2</string>
    <string name="app_widget_card_name">Retro music - Card</string>
    <string name="app_widget_classic_name">Retro music - Classic</string>
    <string name="app_widget_small_name">Retro music - Small</string>
    <string name="artist">Artist</string>
    <string name="artist_desc">Artist desc.</string>
    <string name="artists">Artists</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="bass_boost_strength">Bass Boost Strength</string>
    <string name="biography">Biography</string>
    <string name="biography_unavailable">Couldn\u2019t find the artists biography.</string>
    <string name="black_theme_name">Quite black</string>
    <string name="blacklist">Blacklist</string>
    <string name="cancel_current_timer">Cancel current timer</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Change log maintained from Telegram app</string>
    <string name="clear_action">Clear</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist <b>%1$s</b>? This can\u2019t be undone!]]></string>
    <string name="colored_footers">Colored footers</string>
    <string name="colors">Colors</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="could_not_download_album_cover">"Couldn\u2019t download a matching album cover."</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="create_action">Create</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="custom">Custom</string>
    <string name="date">Date</string>
    <string name="default_hint">No Lyrics</string>
    <string name="delete_action">Delete</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_song_x"><![CDATA[Delete the song <b>%1$s</b>?]]></string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%1$d</b> playlists?]]></string>
    <string name="delete_x_songs"><![CDATA[Delete <b>%1$d</b> songs?]]></string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_remove_from_the_blacklist"><![CDATA[Do you want to remove <b>%1$s</b> from the blacklist?]]></string>
    <string name="donate">Donate</string>
    <string name="donate_summary">If you think I deserve to get paid for my work, you can leave me a few dollars here.</string>
    <string name="download_from_last_fm">Download from Last.fm</string>
    <string name="duration">Duration</string>
    <string name="empty">Empty</string>
    <string name="equalizer">Equalizer</string>
    <string name="error_loading_lyrics_from_network">Error loading from network</string>
    <string name="failed_to_save_playlist">Failed to save playlist (%s).</string>
    <string name="favorites">Favorites</string>
    <string name="flat">Flat</string>
    <string name="folders">Folders</string>
    <string name="genre">Genre</string>
    <string name="grid_size_1">1</string>
    <string name="grid_size_2">2</string>
    <string name="grid_size_3">3</string>
    <string name="grid_size_4">4</string>
    <string name="grid_size_5">5</string>
    <string name="grid_size_6">6</string>
    <string name="grid_size_7">7</string>
    <string name="grid_size_8">8</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="full">Full</string>
    <string name="pref_title_day_dream">Day dream</string>
    <string name="pref_summary_day_dream">Shows song details on dream when music is playing</string>
    <string name="inserted_x_songs_into_playlist_x">Inserted %1$d songs into the playlist %2$s.</string>
    <string name="inspired_designs_by">Inspired designs by</string>
    <string name="join_community">Join the Google Plus community</string>
    <string name="join_community_summary">If you need help or have questions, the Retro Music community on Google Plus is a good place to go.</string>
    <string name="just_show_your_name_on_home_screen">Just show your name on home screen</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_details">Details</string>
    <string name="label_file_format">Format</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="label_track_length">Length</string>
    <string name="last_added">Last added</string>
    <string name="lets_play_something">Let\'s play something</string>
    <string name="library">Library</string>
    <string name="licenses">Licenses</string>
    <string name="light_theme_name">White</string>
    <string name="listing_files">Listing files</string>
    <string name="loading">Loading...</string>
    <string name="loading_products">Loading products…</string>
    <string name="lyrics">Lyrics</string>
    <string name="more">More</string>
    <string name="my_name">My Name</string>
    <string name="my_playlists">My playlist</string>
    <string name="my_top_tracks">My top tracks</string>
    <string name="never">Never</string>
    <string name="pref_summary_about">People who helped on the project</string>
    <string name="pref_summary_colored_app">Background, Control button color changes according to album art from player screen</string>
    <string name="pref_summary_colored_app_shortcuts">Colors the app shortcuts in the accent color. Every time you changed color please toggle this to take effect</string>
    <string name="pref_summary_colored_navigation_bar">Colors the navigation bar in the primary color.</string>
    <string name="pref_summary_open_source_licences">License details for open source software</string>
    <string name="pref_summary_round_corners">Corner edges for window, album art etc.</string>
    <string name="pref_summary_toggle_volume">If have space in now playing screen enable volume controls</string>
    <string name="pref_title_app_shortcuts">Colored app shortcuts</string>
    <string name="pref_title_colored_app">Adaptive color</string>
    <string name="pref_title_general_theme">General theme</string>
    <string name="pref_title_navigation_bar">Colored navigation bar</string>
    <string name="pref_title_open_source_licences">Open source licences</string>
    <string name="pref_title_round_corners">Corner edges</string>
    <string name="pref_title_toggle_volume">Volume controls</string>
    <string name="pref_title_user_info">User info</string>
    <string name="song">Song</string>
    <string name="song_duration">Song duration</string>
    <string name="sort_order">Sort order</string>
    <string name="title">Title</string>
    <string name="title_desc">Title desc.</string>
    <string name="track_hint">"Track (2 for track 2 or 3004 for CD3 track 4)"</string>
    <string name="update">Update</string>
    <string name="version">Version</string>
    <string name="year">Year</string>
    <string name="reset_artist_image">Reset artist image</string>
    <string name="set_artist_image">Set artist image</string>
</resources>