<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_order"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort_order"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_sort_order_title"
                    android:title="@string/title" />
                <item
                    android:id="@+id/action_sort_order_title_desc"
                    android:title="@string/title_desc" />
                <item
                    android:id="@+id/action_sort_order_album"
                    android:title="@string/album" />
                <item
                    android:id="@+id/action_sort_order_year"
                    android:title="@string/year" />
                <item
                    android:id="@+id/action_sort_order_artist_song_duration"
                    android:title="@string/song_duration" />
                <item
                    android:id="@+id/action_sort_order_date"
                    android:title="@string/date" />

            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_play_next"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_current_playing"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_artist_image"
        android:title="@string/set_artist_image"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset_artist_image"
        android:title="@string/reset_artist_image"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_colored_footers"
        android:checkable="true"
        android:title="@string/colored_footers"
        android:visible="false"
        app:showAsAction="never" />

</menu>
