<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="Others">

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="user_info"
            android:title="@string/pref_title_user_info"/>
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="changelog"
            android:summary="@string/changelog_summary"
            android:title="@string/changelog"/>

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="app_version"
            android:summary="0.0.0"
            android:title="@string/version"/>
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="open_source"
            android:summary="@string/pref_summary_open_source_licences"
            android:title="@string/pref_title_open_source_licences"/>
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="about"
            android:summary="@string/pref_summary_about"
            android:title="@string/action_about"/>
    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>