<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:title="@string/colors">
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="light"
            android:entries="@array/pref_general_theme_list_titles"
            android:entryValues="@array/pref_general_theme_list_values"
            android:key="general_theme"
            android:title="@string/pref_title_general_theme"/>
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEColorPreference
            android:key="accent_color"
            android:persistent="false"
            android:summary="@string/accent_color_desc"
            android:title="@string/accent_color"/>
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="should_color_navigation_bar"
            android:persistent="false"
            android:summary="@string/pref_summary_colored_navigation_bar"
            android:title="@string/pref_title_navigation_bar"/>
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="adaptive_color_app"
            android:summary="@string/pref_summary_colored_app"
            android:title="@string/pref_title_colored_app"/>

    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
</android.support.v7.preference.PreferenceScreen>